--- a/index.html
+++ b/index.html
@@ -1,174 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Login</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            box-sizing: border-box;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #000;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        box-sizing: border-box;
+      }
 
-        * {
-            box-sizing: border-box;
-        }
+      * {
+        box-sizing: border-box;
+      }
 
-        .login-container {
-            background-color: #121212;
-            border: 1px solid #333;
-            border-radius: 10px;
-            padding: 30px 20px;
-            width: 360px;
-            max-width: 100%;
-            text-align: center;
-            overflow: hidden;
-        }
+      .login-container {
+        background-color: #121212;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 30px 20px;
+        width: 360px;
+        max-width: 100%;
+        text-align: center;
+        overflow: hidden;
+      }
 
-        .login-container h1 {
-            font-family: 'Lucida Handwriting', cursive;
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
+      .login-container h1 {
+        font-family: "Lucida Handwriting", cursive;
+        font-size: 36px;
+        margin-bottom: 20px;
+      }
 
-        .logo {
-            width: 40px;
-            margin-bottom: 20px;
-        }
+      .logo {
+        width: 40px;
+        margin-bottom: 20px;
+      }
 
-        .form-group {
-            margin-bottom: 15px;
-            text-align: left;
-        }
+      .form-group {
+        margin-bottom: 15px;
+        text-align: left;
+      }
 
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #333;
-            border-radius: 5px;
-            background-color: #262626;
-            color: #fff;
-            font-size: 14px;
-        }
+      .form-group input {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #333;
+        border-radius: 5px;
+        background-color: #262626;
+        color: #fff;
+        font-size: 14px;
+      }
 
-        .form-group input::placeholder {
-            color: #bbb;
-        }
+      .form-group input::placeholder {
+        color: #bbb;
+      }
 
-        .form-group button {
-            width: 100%;
-            padding: 10px;
-            background-color: #0095f6;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-        }
+      .form-group button {
+        width: 100%;
+        padding: 10px;
+        background-color: #0095f6;
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+      }
 
-        .form-group button:hover {
-            background-color: #0077cc;
-        }
+      .form-group button:hover {
+        background-color: #0077cc;
+      }
 
-        .divider {
-            display: flex;
-            align-items: center;
-            margin: 20px 0;
-            color: #666;
-        }
+      .divider {
+        display: flex;
+        align-items: center;
+        margin: 20px 0;
+        color: #666;
+      }
 
-        .divider::before,
-        .divider::after {
-            content: "";
-            flex: 1;
-            height: 1px;
-            background-color: #333;
-        }
+      .divider::before,
+      .divider::after {
+        content: "";
+        flex: 1;
+        height: 1px;
+        background-color: #333;
+      }
 
-        .divider::before {
-            margin-right: 10px;
-        }
+      .divider::before {
+        margin-right: 10px;
+      }
 
-        .divider::after {
-            margin-left: 10px;
-        }
+      .divider::after {
+        margin-left: 10px;
+      }
 
-        .facebook-login {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 15px 0;
-            color: #0095f6;
-            font-size: 14px;
-            text-decoration: none;
-        }
+      .facebook-login {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 15px 0;
+        color: #0095f6;
+        font-size: 14px;
+        text-decoration: none;
+      }
 
-        .facebook-login img {
-            width: 20px;
-            margin-right: 8px;
-        }
+      .facebook-login img {
+        width: 20px;
+        margin-right: 8px;
+      }
 
-        .forgot-password {
-            margin: 10px 0;
-            font-size: 12px;
-            color: #bbb;
-        }
+      .forgot-password {
+        margin: 10px 0;
+        font-size: 12px;
+        color: #bbb;
+      }
 
-        .forgot-password a {
-            color: #fff;
-            text-decoration: none;
-        }
+      .forgot-password a {
+        color: #fff;
+        text-decoration: none;
+      }
 
-        .signup {
-            margin-top: 20px;
-            font-size: 14px;
-        }
+      .signup {
+        margin-top: 20px;
+        font-size: 14px;
+      }
 
-        .signup a {
-            color: #0095f6;
-            text-decoration: none;
-        }
+      .signup a {
+        color: #0095f6;
+        text-decoration: none;
+      }
 
-        @media (max-width: 768px) {
-            input {
-                max-width: 100%;
-            }
+      @media (max-width: 768px) {
+        input {
+          max-width: 100%;
         }
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="login-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram Logo" class="logo">
-        <h1>Instagram</h1>
-        <form action="https://www.youtube.com/results">
-            <div class="form-group">
-                <input type="text" placeholder="Edo okati kottu bro id or number" required name="search_query">
-            </div>
-            <div class="form-group">
-                <input type="password" placeholder="Nik istam aythe kottu" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">Log in</button>
-            </div>
-        </form>
-        <div class="divider">OR</div>
-        <a href="#" class="facebook-login">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook logo">
-            Log in with Facebook
-        </a>
-        <div class="forgot-password">
-            <a href="#">Forgot password?</a>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg"
+        alt="Instagram Logo"
+        class="logo"
+      />
+      <h1>Instagram</h1>
+      <form action="https://www.google.com/search" method="get">
+        <div class="form-group">
+          <input
+            type="text"
+            placeholder="Edo okati kottu bro id or number"
+            name="q"
+          />
         </div>
-        <div class="signup">
-            Don't have an account? <a href="#">Sign up</a>
+        <div class="form-group">
+          <input type="password" placeholder="Nik istam aythe kottu" />
         </div>
+        <div class="form-group">
+          <button type="submit">Log in</button>
+        </div>
+      </form>
+      <div class="divider">OR</div>
+      <a href="#" class="facebook-login">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg"
+          alt="Facebook logo"
+        />
+        Log in with Facebook
+      </a>
+      <div class="forgot-password">
+        <a href="#">Forgot password?</a>
+      </div>
+      <div class="signup">Don't have an account? <a href="#">Sign up</a></div>
     </div>
-</body>
+  </body>
 </html>
